--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.automationlab</groupId>
-	<artifactId>visualstory</artifactId>
+	<artifactId>ticketbash</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>visualstory</name>
+	<name>ticketbash</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
